--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "botstrap": "^0.20.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-bootstrap": "^0.26.3",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
